...
                        case WheelDatePickerMode.ymd:
                          result = _clamp(DateTime(year, month, day));
                          break;
                      }
                      Navigator.pop(context, result);
                    },
                    child: const Text('确定')),
              ],
            ),
          ),
          SizedBox(
            height: 120, // 每列显示3个 item，40*3
            child: Row(
...
